swiper fixed on mobile

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -900,7 +900,7 @@ html {
 body {
   max-width: 1440px;
   margin: 0 auto;
-  font-family: "Bebas Neue", cursive;
+  font-family: "Bebas Neue", sans-serif;
 }
 
 ul {
@@ -1544,7 +1544,7 @@ p {
     writing-mode: vertical-lr;
     font-size: 12px;
     height: 131px;
-    font-family: Bebas Neue, sans-serif;
+    font-family: "Bebas Neue", sans-serif;
     letter-spacing: 2px;
   }
 
@@ -3153,7 +3153,12 @@ input:-webkit-autofill:focus {
 
 @media (min-width: 535px) and (max-width: 1020px) {
   .swiper-pagination {
-    height: 100%;
+    visibility: hidden;
+  }
+}
+
+@media (max-width: 534px) {
+  .swiper-pagination {
     visibility: hidden;
   }
 }
@@ -3291,7 +3296,5 @@ input:-webkit-autofill:focus {
 .swiper-slide picture {
   width: 100%;
 }
-
-
 
 /*# sourceMappingURL=main.css.map */
