--- a/src/styles/swiper.scss
+++ b/src/styles/swiper.scss
@@ -9,7 +9,10 @@
     height: 100%;
 
     @include onTablet {
-      height: 100%;
+      visibility: hidden;
+    }
+
+    @include onMobile {
       visibility: hidden;
     }
   }
